--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "format": "prettier --write"
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
